kubernetes/manifests/prod/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames:
  - jellyfin.k8s.labz
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-gateway
    namespace: istio-system
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prod-jellyfin 
      port: 8096
